<resources>
    <string name="app_name">Cardiac coherence</string>
    <string name="cc1">Inhale for 5 seconds</string>
    <string name="cc2">Exhale for 5 seconds</string>
    <string name="cc3">Practice for 5 minutes</string>
    <string name="cc4">Relaxation guaranteed</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="autostart">Automatic Audio Startup</string>
    <string name="volume">Backing up and restoring volume</string>
    <string name="theme">Dark theme</string>
    <string name="credits">" The practice of <b>cardiac coherence</b> regulates the heart rate, brings calm and serenity to your day.  It is advisable to practice sitting, back straight and feet to dishes. Accompanying the breaths with a gesture makes exercise more effective. We will be able to evolve towards meditation.  This application, based on a sound loop, also allows a freer practice (hands and gaze released) during daily activities. We can then move towards a rather mindful type of practice.  <i>Palpac_Prod_2018</i> Credit: Ciara Cable (heart icon)"</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="clear">Reset</string>
    <string name="title_clear">Reset ?</string>
    <string name="message_clear">Restore default sound.</string>
    <string name="file_choose">Select sound file</string>
    <string name="file_choose_disable">Choose sound (SDcard needed)</string>
    <string name="sound_error">Error custom sound, reseted</string>
    <string name="file_copy_error">File copy exception</string>
    <string name="notif_ticker">Cohérence cardiaque Play/Stop</string>
    <string name="notif_title">Cardiac coherence</string>
    <string name="notif_text">Play / Pause</string>
    <string name="alert_title">Quit ?</string>
    <string name="alert_message">Caution, the sound loop will be stopped.</string>
    <string name="alert_postive">Stay</string>
    <string name="alert_negative">Exit</string>
    <string name="timer_title">Set duration</string>
    <string name="textv_choose1">Choose predefined sound :</string>
    <string name="textv_choose2">Or choose sound in phone :</string>
    <string name="textv_choose3">Chosen sound :</string>
    <string name="rate">Rate app</string>
    <string name="donate">Donate</string>
    <string name="PLAYBACK_CHANNEL_NAME">Cardiac Coherence Channel</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_timer">Timer</string>
    <string name="spinner_title">"CHOOSE A SOUND"</string>
</resources>
