<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:textAlignment="center"
    android:background="@drawable/fond_settings">

    <LinearLayout
        android:id="@+id/linear_fond"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAlignment="center"
        android:gravity="center">

        <CheckBox
            android:id="@+id/checkBox_autostart"
            android:theme="@style/checkBoxStyle_Light"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/text_color"
            android:text="@string/autostart" />
        <CheckBox
            android:id="@+id/checkBox_save_volume"
            android:theme="@style/checkBoxStyle_Light"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/text_color"
            android:text="@string/volume" />
        <CheckBox
            android:id="@+id/checkBox_dark"
            android:theme="@style/checkBoxStyle_Light"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/text_color"
            android:text="@string/theme" />

        <TextView
            android:id="@+id/textV_choose1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/textv_choose1"/>
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_settings"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:spinnerMode="dropdown"/>

        <TextView
            android:id="@+id/textV_choose2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/textv_choose2"/>
        <Button
            android:id="@+id/button_file_choose"
            android:layout_width="fill_parent"
            android:background="@drawable/button_settings"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:onClick="FILE_CHOOSE"
            android:text="@string/file_choose"
            android:textColor="@color/text_color"/>

        <TextView
            android:id="@+id/textV_choose3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/textv_choose3"/>
        <LinearLayout
            android:id="@+id/linear_son"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textV_choose"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:maxLines="3"
                android:gravity="center"
                android:scrollbars="vertical"
                android:layout_weight="30"
                android:textColor="@color/text_color"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_text_settings"/>
            <Button
                android:id="@+id/button_clear"
                android:layout_width="fill_parent"
                android:background="@drawable/button_settings"
                android:layout_height="40dp"
                android:layout_weight="70"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:onClick="CLEAR"
                android:text="@string/clear"
                android:textColor="@color/text_color"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_save"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_cancel"
                android:layout_width="fill_parent"
                android:background="@drawable/button_settings"
                android:layout_height="40dp"
                android:layout_weight="50"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:onClick="SAVE"
                android:text="@string/cancel"
                android:textColor="@color/text_color"/>
            <Button
                android:id="@+id/button_save"
                android:layout_width="fill_parent"
                android:background="@drawable/button_settings"
                android:layout_height="40dp"
                android:layout_weight="50"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:onClick="SAVE"
                android:text="@string/save"
                android:textColor="@color/text_color"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAlignment="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textV1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textColor="@color/text_color"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/credits"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_donate"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_rate"
                android:layout_width="fill_parent"
                android:background="@drawable/button_settings"
                android:layout_height="40dp"
                android:layout_weight="50"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:onClick="RATE"
                android:text="@string/rate"
                android:textColor="@color/text_color"/>
            <Button
                android:id="@+id/button_donate"
                android:layout_width="fill_parent"
                android:background="@drawable/button_settings"
                android:layout_height="40dp"
                android:layout_weight="50"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:onClick="DONATE"
                android:text="@string/donate"
                android:textColor="@color/text_color"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>